# Kubanov_CS_LABS2025

./: CMakeLists.txt  ClassDoer.cpp  ClassDoer.hpp  README.md  StartApp.cpp  StartApp.hpp  fraction.cpp  fraction.hpp  in.txt  main.cpp  out.txt  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp  task5  task5.cpp  task6  task6.cpp  task7  task7.cpp  task8  task8.cpp  task9  task9.cpp
Animals/: CMakeLists.txt  animals.cpp  animals.hpp  artiodactyls.cpp  artiodactyls.hpp  birds.cpp  birds.hpp  mammals.cpp  mammals.hpp
Features/: CMakeLists.txt  features.cpp  features.hpp
MyStack/: CMakeLists.txt  MyStack.cpp  MyStack.hpp
Polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.hpp
Term/: CMakeLists.txt  term.cpp  term.hpp
containers/: myset.h  myvector.h
mymat/: CMakeLists.txt  mat.cpp  mat.hpp
mymath/: CMakeLists.txt  mymath.hpp
planet/: CMakeLists.txt  planet.cpp  planet.hpp
